fixed z-indexes of setup and vignette

--- a/css/pages/setup.css
+++ b/css/pages/setup.css
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.2em 0.5em;
-  z-index: 99;
+  z-index: 1000;
 }
 .setup-sentence {
   margin-bottom: 1.5rem;
@@ -131,4 +131,9 @@
 
 .vignette-setup button.selected {
   background: #000dff;
+}
+
+body[data-vignette="v2"] .setup-header,
+body[data-vignette="v3"] .setup-header {
+  color: white;
 }
