--- a/css/pages/visualizer.css
+++ b/css/pages/visualizer.css
@@ -2,6 +2,7 @@
 .visualizer-navigation {
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
+    z-index: 1000;
     color: white;
     font-size: 2rem;
     font-weight: 200;
